--- a/app/src/pages/page-setting.html
+++ b/app/src/pages/page-setting.html
@@ -176,10 +176,10 @@
 
                 let apiValue = {
                     'api.job': this.config.api.job,
-                    'api.job_api': this.config.api.job + '/jobs',
+                    'api.job_api': this.config.api.job + 'jobs',
                     'api.storages': this.config.api.storages,
-                    'api.storages_api': this.config.api.storages + '/storage',
-                    'api.storages_obj_api': this.config.api.storages + '/object',
+                    'api.storages_api': this.config.api.storages + 'storage',
+                    'api.storages_obj_api': this.config.api.storages + 'object',
                     'OAuth.token': this.config.OAuth.token,
                     'api.version':this.config.api.version
                 };
