update logo in app

--- a/app/src/common/dashboard-sidemenu.html
+++ b/app/src/common/dashboard-sidemenu.html
@@ -218,7 +218,8 @@
 
             .imgLogoSmall {
                 /* padding: 14px; */
-                width: 36px;
+                width: 50px;
+                /* margin-top: -20px; */
             }
         </style>
         <!--<style>
