--- a/app/src/pages/page-setting.html
+++ b/app/src/pages/page-setting.html
@@ -97,7 +97,7 @@
                                     <div class="form-group row">
                                         <label for="example-search-input" class="col-12 col-form-label">API Version</label>
                                         <div class="col-12">
-                                            <select class="form-control"  value="{{config.api.version::input}}">
+                                            <select class="form-control" value="{{config.api.version::input}}">
                                                 <option value="1">v1.2+</option>
                                                 <option value="0">v1</option>
                                             </select>
@@ -170,18 +170,43 @@
                 });
             }
 
+            strAPI(ori, tail) {
+                let url = ori;;
+                let lastStr = ori.charAt(ori.length - 1);
+                // console.log("last str = ", lastStr);
+                if (lastStr == "/") {
+                    url = ori + tail;
+                }
+                else {
+                    url = ori + "/" + tail;
+                }
+                // console.log("url = ",url);
+                return url;
+            }
+
             _savebt(ev) {
                 if (!store.get('api'))
                     store.set({ 'api': {} });
 
+
+
+                // let apiValue = {
+                //     'api.job': this.config.api.job,
+                //     'api.job_api': this.config.api.job + '/jobs',
+                //     'api.storages': this.config.api.storages,
+                //     'api.storages_api': this.config.api.storages + '/storage',
+                //     'api.storages_obj_api': this.config.api.storages + '/object',
+                //     'OAuth.token': this.config.OAuth.token,
+                //     'api.version':this.config.api.version
+                // };
                 let apiValue = {
                     'api.job': this.config.api.job,
-                    'api.job_api': this.config.api.job + 'jobs',
+                    'api.job_api': this.strAPI(this.config.api.job, "jobs"),
                     'api.storages': this.config.api.storages,
-                    'api.storages_api': this.config.api.storages + 'storage',
-                    'api.storages_obj_api': this.config.api.storages + 'object',
+                    'api.storages_api': this.strAPI(this.config.api.storages, "storage"),
+                    'api.storages_obj_api': this.strAPI(this.config.api.storages, "object"),
                     'OAuth.token': this.config.OAuth.token,
-                    'api.version':this.config.api.version
+                    'api.version': this.config.api.version
                 };
 
                 // console.log("api value = ",apiValue);
@@ -189,7 +214,7 @@
                 store.set(apiValue);
 
                 this.dispatchEvent(new CustomEvent('config-update'));
-                
+
                 this.$.toast.text = "Config saved";
                 this.$.toast.horizontalAlign = "right";
                 this.$.toast.verticalAlign = "top";
