--- a/app/test/dashboard-app/dashboard-app_test.html
+++ b/app/test/dashboard-app/dashboard-app_test.html
@@ -6,10 +6,10 @@
 
     <title>dashboard-app test</title>
 
-    <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="../../../web-component-tester/browser.js"></script>
+    <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="/bower_components/web-component-tester/browser.js"></script>
 
-    <link rel="import" href="../../src/dashboard-app/dashboard-app.html">
+    <link rel="import" href="../../src/dashboard-app.html">
   </head>
   <body>
 
